--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:esp32-c3-devkit]
 platform = espressif32
-board = esp32dev
+board = esp32-c3-devkitc-02
 framework = arduino
+lib_deps = adafruit/Adafruit ST7735 and ST7789 Library@^1.11.0
+monitor_speed = 115200
