--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "D:/Project/Mechatronics/Mechatronics - Emoji Display/.pio/build/esp32-c3-devkit/firmware.elf",
+            "executable": "D:/Project/Mechatronics/Mechatronics - Emoji Display/emoji-display/.pio/build/esp32-c3-devkit/firmware.elf",
             "projectEnvName": "esp32-c3-devkit",
             "toolchainBinDir": "C:/Users/lenovo/.platformio/packages/toolchain-riscv32-esp@8.4.0+2021r2-patch5/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -25,7 +25,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "D:/Project/Mechatronics/Mechatronics - Emoji Display/.pio/build/esp32-c3-devkit/firmware.elf",
+            "executable": "D:/Project/Mechatronics/Mechatronics - Emoji Display/emoji-display/.pio/build/esp32-c3-devkit/firmware.elf",
             "projectEnvName": "esp32-c3-devkit",
             "toolchainBinDir": "C:/Users/lenovo/.platformio/packages/toolchain-riscv32-esp@8.4.0+2021r2-patch5/bin",
             "internalConsoleOptions": "openOnSessionStart"
@@ -34,7 +34,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "D:/Project/Mechatronics/Mechatronics - Emoji Display/.pio/build/esp32-c3-devkit/firmware.elf",
+            "executable": "D:/Project/Mechatronics/Mechatronics - Emoji Display/emoji-display/.pio/build/esp32-c3-devkit/firmware.elf",
             "projectEnvName": "esp32-c3-devkit",
             "toolchainBinDir": "C:/Users/lenovo/.platformio/packages/toolchain-riscv32-esp@8.4.0+2021r2-patch5/bin",
             "internalConsoleOptions": "openOnSessionStart",
